--- a/src/main/resources/templates/returnListTemplate.html
+++ b/src/main/resources/templates/returnListTemplate.html
@@ -22,6 +22,10 @@
             <td th:text="${car.model}"></td>
 
         </tr>
+
+
+        <a href="formsTemplate.html" th:href="@{/car/form}">Dodaj samochód</a>
+
         </tbody>
     </table>
 
